Bug 707865 - Convert nsTArray::SizeOf() to nsTArray::SizeOfExcludingThis().  r=jlebar.

--HG--
extra : rebase_source : d802d58bc7dedda2490878793923adc0ab55f779